After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721803 - worker: ignore '' username
worker: ignore '' username
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-08 16:50 UTC by Ray Strode [halfline]
Modified: 2014-01-08 16:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
worker: ignore '' username (3.61 KB, patch)
2014-01-08 16:50 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2014-01-08 16:50:41 UTC
Some PAM modules set a "" username to mean "user not set yet",
apparently, instead of NULL.

This commit guards against that to prevent a crash.

Red-Hat-Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=965370
Comment 1 Ray Strode [halfline] 2014-01-08 16:50:42 UTC
Created attachment 265725 [details] [review]
worker: ignore '' username