worker: ignore '' username

Some PAM modules set a "" username to mean "user not set yet",
apparently, instead of NULL.

This commit guards against that to prevent a crash.

Red-Hat-Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=965370

https://bugzilla.gnome.org/show_bug.cgi?id=721803